--- a/interface/package.json
+++ b/interface/package.json
@@ -23,6 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://frontnd.ninja/userinterface/",
   "eslintConfig": {
     "extends": "react-app"
   },
