--- a/interface/package.json
+++ b/interface/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "dayjs": "^1.8.36",
     "feather-icons": "^4.28.0",
     "gulp": "^4.0.2",
     "jquery": "^3.5.1",
