fixed bugs with popovers, replaced day.js with vanilla js, made js modules and react conponents more DRY and commented

--- a/interface/package.json
+++ b/interface/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://frontnd.ninja/userinterface/",
+  "homepage": "https://frontnd.ninja/ui",
   "eslintConfig": {
     "extends": "react-app"
   },
