--- a/interface/package.json
+++ b/interface/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage": "https://frontnd.ninja/ui",
+  "homepage": "https://frontnd.ninja/userinterface",
   "eslintConfig": {
     "extends": "react-app"
   },
